--- a/contacts.css
+++ b/contacts.css
@@ -59,7 +59,9 @@
     font-size: calc(3vh + 80px);
     font-weight: bold;
     text-align: center;
+    margin-bottom: 50px;
   }
+  
 
   button {
     height: 5%;
@@ -69,7 +71,7 @@
     font-weight: bold;
     border: none;
     font-weight: bold;
-    margin-top: 2%;
+    margin-top: 5%;
     transition: all 1s ease;
   }
 
