--- a/contacts.css
+++ b/contacts.css
@@ -95,6 +95,23 @@
     transform: scale(1.2);
   }
 
+  #warning{
+    position: absolute;
+    top: 8%;
+    left: 26.5%;
+    width: 200px;
+    height: 40px;
+    color: #ffffff;
+    background: red;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    display: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
   
   @media only screen and (max-width: 700px) {
   
