--- a/style.css
+++ b/style.css
@@ -122,6 +122,23 @@ a{
   overflow: hidden;
 }
 
+#warning{
+  position: absolute;
+  top: 8%;
+  left: 24.5%;
+  width: 200px;
+  height: 40px;
+  color: #ffffff;
+  background: red;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  display: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 
 .blob6 { 
   position: absolute;
